| Summary: | ASTERISK-26367: rtp: Timestamps broken when video frame is across multiple RTP packets | ||||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |||
| Date Opened: | 2016-09-13 13:22:12 | Date Closed: | 2016-09-14 17:22:51 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Core/RTP | ||
| Versions: | 13.11.2 14.0.0-beta2 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | The RTP support currently assumes that a video frame will be contained within a single RTP packet. For larger video frames this isn't actually true and they will be across multiple. When this occurs the timestamp for sending is calculated to be 0 and the remote side will most likely see no video.
If possible we should preserve the timestamp. | ||||
| Comments: | |||||